# jobreport

./: LICENSE  jobreport.cabal
JobReport/: Database.hs  Export.hs  Insert.hs
src/: Main.hs
src/JobReport/: Database.hs  Export.hs  Insert.hs
