name:                jobreport
version:             0.1.0.0
license:             Apache2
license-file:        LICENSE
author:              Stefan Haller
maintainer:          haliner@gmail.com
build-type:          Simple
cabal-version:       >= 1.8

executable jobreport
  main-is:
    Main.hs
  other-modules:
    JobReport.Database,
    JobReport.Export,
    JobReport.Insert
  build-depends:
    base                 == 4.6.*,
    esqueleto            == 1.3.*,
    monad-logger         == 0.3.*,
    optparse-applicative == 0.5.*,
    pandoc               == 1.12.*,
    pandoc-types         == 1.12.*,
    persistent           == 1.2.*,
    persistent-sqlite    == 1.2.*,
    persistent-template  == 1.2.*,
    resourcet            == 0.4.*,
    transformers         == 0.3.*
  ghc-options:
    -Wall

-- vim: set ts=2 sts=2 sw=2 et:
