name:                jobreport
version:             0.1.0.1
license:             MIT
license-file:        LICENSE
author:              Stefan Haller
maintainer:          haliner@gmail.com
build-type:          Simple
cabal-version:       >= 1.8

executable jobreport
    build-depends:
        base                 >= 4.6  && < 5,
        HDBC                 >= 2.3  && < 3,
        HDBC-sqlite3         >= 2.3  && < 3,
        optparse-applicative >= 0.5  && < 1,
        pandoc               >= 1.12 && < 2,
        pandoc-types         >= 1.12 && < 2

    main-is:
        Main.hs

    other-modules:
        JobReport.Database,
        JobReport.Export,
        JobReport.Insert

    hs-source-dirs:
        src
